2013-02-06  Ramon Casero  <rcasero@gmail.com>

	* ../matlab/PointsToolbox/pts_tps_weights.m: (v0.4.1)

	- Update deprecated syntax for nargchk, nargoutchk. Remove
	whitespaces before and after brackets.

2013-02-02  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FiltersToolbox/bwsplitwithsurf.m: (v0.1.0)

	- BWSPLITWITHSURF Split a volume into connected components
	separated by a surface.

2013-02-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/bwbox.m: (v0.2.0)

	- Reimplement using regionprops(, 'BoundingBox'), which is much
	faster.

	* Add matlab/FiltersToolbox/bwbox.m: (v0.1.0)

	- BWBOX Find tight box around segmentation (and possibly add a margin).

2013-01-31  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_interpolation.m: (v0.4.0)
	* matlab/PointsToolbox/scinrrd_surface_interpolation.m: (v0.6.0)

	- Provide point coordinates X2 at the output. While the user
	provides them at the input, with method mbae, this set is extended
	with more points extrapolated from the domain boundary.

	- In scinrrd_surface_interpolation(), provide also the
	parameterisation EM of the points.

	* matlab/PointsToolbox/bwmesh.m: (v0.1.5)

	- Upgrade deprecated syntax for narginchk, nargoutchk.

	* matlab/ThirdPartyToolbox/IsomapII.m: (v0.1.1)

	- In mode 3, instead of passing the distance function as a string
	that will be run with feval, we now pass a function handle, that
	will be faster and is more elegant. It also allows to pass local
	functions that are not in the global path.

2013-01-29  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/ItkImFilter.cpp: (v1.2.0)
	* matlab/ItkToolbox/itk_imfilter.m: (v0.6.2)

	- Add filters ApproximateSignedDistanceMapImageFilter and
	SignedDanielssonDistanceMapImageFilter.

2013-01-28  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/Vesselness3DImage.cxx: (v0.1.1)
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.h: (v0.2.1)